# commonlib-rs

./: .gitignore  .prettierrc  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TODO.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-documentation-issue.yml  3-feature-request.yml  config.yml
crates/commonlib/: Cargo.toml
crates/commonlib/src/: lib.rs  prelude.rs
crates/commonlib/src/error/: display.rs  fmt.rs  mod.rs
crates/commonlib/src/logger/: fields.rs  file.rs  layer.rs  mod.rs
crates/commonlib/src/misc/: mod.rs
crates/commonlib/src/num/: mod.rs  round.rs
crates/commonlib/src/str/: mod.rs  pad_eq.rs  pad_len.rs  trunc.rs
crates/commonlib/src/time/: convert.rs  mod.rs  stopwatch.rs
crates/commonlib_macros/: Cargo.toml
crates/commonlib_macros/src/: lib.rs
crates/commonlib_proc_macros/: Cargo.toml
crates/commonlib_proc_macros/src/: lib.rs
crates/playground/: Cargo.toml
crates/playground/src/: main.rs
modules/commonlib/: Cargo.toml
modules/commonlib/src/: error.rs  lib.rs  stopwatch.rs
modules/commonlib/src/error/: display.rs  macro.rs  mod.rs  nester.rs  soft_panic.rs
modules/commonlib/src/logger/: field.rs  fields.rs  file.rs  file_logger.rs  layer.rs  mod.rs  util.rs
modules/commonlib/src/macros/: box.rs  mod.rs
modules/commonlib/src/str/: mod.rs  pad_eq.rs  pad_len.rs  pad_to_len.rs  trunc.rs
src/: error.rs  lib.rs
src/modules/: logger.rs  mod.rs  pad_string_to_length.rs  pad_strings_to_length.rs  pad_strings_to_longest.rs  stopwatch.rs
src/modules/logger/: fields.rs  file.rs  layer.rs  mod.rs
src/tests/: logger.rs  mod.rs
test-app/: Cargo.toml
