[package]
name = "commonlib"
version = "0.0.1"
edition = "2021"

[dependencies]
async-std = "1.12.0"
chrono = "0.4.33"
env_logger = "0.11.1"
lazy_static = "1.4.0"
log = "0.4.20"
owo-colors = "4.0.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
supports-color = "3.0.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter"] }

[features]
logger = []
