[package]
name = "commonlib"
version = "0.0.1"
edition = "2021"

[dependencies]
async-std = { version = "1.12.0", optional = true }
chrono = { version = "0.4.33", optional = true }
env_logger = { version = "0.11.1", optional = true }
lazy_static = { version = "1.4.0", optional = true }
log = { version = "0.4.20", optional = true }
owo-colors = { version = "4.0.0", optional = true }
serde = { version = "1.0.196", features = ["derive"], optional = true }
serde_json = { version = "1.0.113", optional = true }
supports-color = { version = "3.0.0", optional = true }
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true, features = [
  "std",
  "env-filter",
] }

[features]
logger = [
  "async-std",
  "chrono",
  "env_logger",
  "lazy_static",
  "log",
  "owo-colors",
  "serde",
  "serde_json",
  "supports-color",
  "tracing",
  "tracing-subscriber",
]
