[package]
name = "commonlib"
version = "0.0.1"
edition = "2021"

[dependencies]
commonlib_macros = { path = "../commonlib_macros" }
commonlib_proc_macros = { path = "../commonlib_proc_macros" }
#
anyhow = { version = "1.0.86" }
chrono = { version = "0.4.38", optional = true }
csv = { version = "1.3.0", optional = true }
owo-colors = { version = "4.0.0", optional = true }
serde = { version = "1.0.203", features = ["derive"], optional = true }
supports-color = { version = "3.0.0", optional = true }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt", "sync"], optional = true }
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }

[features]
logger = [
  "dep:chrono",
  "dep:csv",
  "dep:serde",
  "dep:tokio",
  "dep:tracing",
  "dep:tracing-subscriber",
]
colorful-logs = ["dep:owo-colors", "dep:supports-color"]
