[package]
name = "commonlib"
version = "0.0.1"
edition = "2021"

[dependencies]
chrono = { version = "0.4.35", optional = true }
owo-colors = { version = "4.0.0", optional = true }
serde = { version = "1.0.197", features = ["derive"], optional = true }
serde_json = { version = "1.0.114", optional = true }
supports-color = { version = "3.0.0", optional = true }
thiserror = "1.0.59"
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }

[features]
logger = [
  "dep:chrono",
  "dep:owo-colors",
  "dep:serde",
  "dep:serde_json",
  "dep:supports-color",
  "dep:tracing",
  "dep:tracing-subscriber",
]
